--- a/food-api/package.json
+++ b/food-api/package.json
@@ -39,6 +39,7 @@
     "express": "^5.1.0",
     "mssql": "^11.0.1",
     "multer": "^2.0.2",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "slugify": "^1.6.6"
   }
 }
